# nTopAero_AVL

./: .gitignore  AERODECK_QUICK_REFERENCE.md  AERODECK_USAGE_GUIDE.md  CHECKLIST.md  ELEVON_FIX_COMPLETE.md  FINAL_ELEVON_CORRECTION.md  HINGE_LINE_FIX_SUMMARY.md  LICENSE  NACA_64-208_ANALYSIS_SUMMARY.md  NEW_GEOMETRY_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REPORT_FIXES_SUMMARY.md  STATUS.md  SUMMARY.md  UNIT_CONVERSION_BUG_FIX.md  calculate_elevon_forces.py  check_dutch_roll_200mph.py  check_reynolds_20kft.py  dutch_roll_speed_sweep_summary.md  elevon_forces_data.json  plot_planform_updated.py  pyproject.toml  setup.py  show_neutral_point.py  test_quick.py  verify_corrected_hinge.py  verify_elevon_fix.py  verify_new_elevon_placement.py  verify_new_geometry.py  visualize_corrected_hinge.py
.claude/: settings.local.json
Data/: ELEVONpts.csv  LEpts.csv  README.md  TAILpts.csv  TEpts.csv  WINGLETpts.csv  mass.csv
Plan/: AeroDeck_Pipeline_Development_Plan.md
aerodeck/: __init__.py  cli.py
aerodeck/analysis/: __init__.py  avl_runner.py  xfoil_runner.py
aerodeck/geometry/: __init__.py  avl_translator.py  loader.py  validator.py
aerodeck/output/: html_viewer.py
aerodeck/utils/: __init__.py  config.py  logger.py
examples/: basic_usage.py
polars/: polar_re1.00e+06_m0.00.csv  polar_re1.00e+07_m0.00.csv  polar_re5.00e+06_m0.00.csv
polars_test/: polar_re1.00e+06_m0.00.csv  polar_re5.00e+06_m0.00.csv
tests/: __init__.py  test_avl_translator.py  test_geometry_loader.py
